--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-choose",
   "version": "0.0.1",
   "description": "A easy way to create radio/checkbox group",
-  "main": "index.js",
+  "main": "index.jsx",
   "directories": {
     "example": "example",
     "test": "test"
@@ -28,5 +28,17 @@
   "bugs": {
     "url": "https://github.com/hunnble/react-choose/issues"
   },
-  "homepage": "https://github.com/hunnble/react-choose#readme"
+  "homepage": "https://github.com/hunnble/react-choose#readme",
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.7.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "webpack": "^1.14.0"
+  }
 }
